--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "homepage": "https://tarastupko.github.io/goit-js-hw-10",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10e/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10/"
   },
-  
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/goitacademy/parcel-project-template.git"
